--- a/sections.html
+++ b/sections.html
@@ -8,9 +8,8 @@
         <title>أقسامنا</title>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
         <link rel="stylesheet" href="style.css">
-
-
-
+        <link rel="stylesheet" href="headerStyle.css">
+        <link rel="stylesheet" href="footerStyle.css">
     </head>
 
     <body>
