--- a/offer.html
+++ b/offer.html
@@ -15,22 +15,9 @@ and open the template in the editor.
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="headerStyle.css">
     <link rel="stylesheet" href="footerStyle.css">
+    <link rel="stylesheet" href="offer_Style.css">
+    <script src="offer_Script.js"></script>
 
-
-    <style>
-        label {
-            padding-right: 3%;
-            font-size: 18px;
-            /*width: 100%;*/
-        }
-
-        div input {
-            margin-right: 15%;
-            border-radius: 10px;
-            height: 40px;
-            /*width: 100%;*/
-        }
-    </style>
 </head>
 
 
@@ -154,55 +141,21 @@ and open the template in the editor.
                                 سعر المنتج:
                             </label></br>
 
-                            <input type="radio" id="Tprice1" name="Tprice" value="free" onclick="EnableTextBox()"
-                                required>
+                            <input type="radio" id="Tprice1" name="Tprice" value="free" onclick="EnableTextBox()"required>
                             <label for="Tprice1">مجاناً</label><br>
 
                             <input type="radio" id="Tprice2" name="Tprice" value="price" onclick="EnableTextBox()">
                             <label for="Tprice1">مبلغ</label><br>
 
-                            <input style="margin-right: 25%;" type="number" min="1" max="100,000" id="TcustomPrice"
-                                name="Tprice" hidden="true" required><br></br>
-
-                            <script>
-                                function EnableTextBox() {
-                                    var hasPrice = document.getElementById("Tprice2");
-
-                                    var CustomPrice = document.getElementById("TcustomPrice");
-
-                                    CustomPrice.hidden = hasPrice.checked ? false : true;
-
-                                    if (!CustomPrice.disabled) {
-                                        CustomPrice.focus();
-                                    }
-                                }
-                            </script>
-
-
+                            <input style="margin-right: 25%;" type="number" min="1" max="100,000" id="TcustomPrice" name="Tprice" hidden="true" required>
+                            <br></br>
                         </div>
+                        </br>
 
                         <div id="tool_city">
                             <label id="Tcity_Label" for="Tcity">
                                 مدينة البائع:
                             </label></br>
-
-                            <style>
-                                .dropdown {
-                                    background-color: #f1f1f1;
-                                    color: black;
-
-                                    font-size: 18px;
-                                    margin-top: 3%;
-                                    margin-right: 15%;
-                                    border-radius: 10px;
-
-                                    padding-right: 5%;
-
-                                    height: 40px;
-                                    width: 200px;
-                                    border: none;
-                                }
-                            </style>
 
                             <div class="dropdownMenu">
                                 <select class="dropdown" id="Tcity" name="Tcity" required>
@@ -216,58 +169,6 @@ and open the template in the editor.
                             </div>
                             </br></br>
                         </div>
-
-                        <!--
-                        <div id="tool_contact">
-                            <label id="Tcontact_Label" for="Tcontact">
-                                طريقة التواصل:
-                            </label></br>
-                            <div id="checkBoxContact" required>
-                                <input type="checkbox" id="Tcontact1" name="Tcontact" value="email"
-                                    onclick="ContactTextBox()">
-                                <label for="Tcontact1">بريد الكتروني</label><br>
-
-                                <input style="margin-right: 25%; width: 400px;" type="email" id="Temail" name="Tcontact"
-                                    placeholder="YourEmail@email.com" hidden="true" required><br><br>
-
-                                <input type="checkbox" id="Tcontact2" name="Tcontact" value="phone"
-                                    onclick="ContactTextBox()">
-                                <label for="Tprice1">جوال</label><br>
-
-                                <input style="margin-right: 25%; width: 400px;" type="tel" id="Tphone" name="Tcontact"
-                                    placeholder="55-5555-555" pattern="[0-5]{2}-[0-9]{4}-[0-9]{3}" hidden="true"
-                                    required>
-                                <br></br>
-
-                                <script>
-                                    function ContactTextBox() {
-                                        var byEmail = document.getElementById("Tcontact1");
-                                        var byPhone = document.getElementById("Tcontact2");
-
-                                        var email = document.getElementById("Temail");
-                                        var phone = document.getElementById("Tphone");
-
-                                        //email.disabled = byEmail.checked ? false : true;
-
-                                        if (byEmail.checked) {
-                                            //phone.disabled;
-                                            email.hidden = false;
-                                            email.focus();
-                                        } else {
-                                            email.hidden = true;
-                                        }
-
-                                        if (byPhone.checked) {
-                                            phone.hidden = false;
-                                            phone.focus();
-                                        } else {
-                                            phone.hidden = true;
-                                        }
-
-                                    }
-                                </script>
-                            </div>
-                        </div>-->
                     </div>
 
                     <div id="leftSide" style="display: inline-table; width: 30%; margin-right: 5%;">
@@ -301,71 +202,6 @@ and open the template in the editor.
                                 </select>
                             </div>
                             <br>
-                            <script>
-                                var tools = {};
-                                tools['sewing'] = [
-                                    'ابر',
-                                    'خيوط',
-                                    'اقمشة',
-                                    'طارة',
-                                    'آخر'];
-
-                                tools['canvas'] = [
-                                    'فرش',
-                                    'مزيل الوان',
-                                    'الوان',
-                                    'لوحة الوان',
-                                    'آخر'];
-
-                                tools['glass'] = [
-                                    'ادوات نحت',
-                                    'صحن دوار',
-                                    'قوالب تشكيل',
-                                    'اخر'];
-
-                                tools['other'] = [
-                                    'ابر',
-                                    'خيوط',
-                                    'اقمشة',
-                                    'طارة',
-                                    'فرش',
-                                    'مزيل الوان',
-                                    'الوان',
-                                    'لوحة الوان',
-                                    'ادوات نحت',
-                                    'صحن دوار',
-                                    'قوالب تشكيل',
-                                    'آخر'
-                                ]
-
-                                function changingList() {
-                                    var section = document.getElementById("Tsection");
-                                    var type = document.getElementById("Ttype");
-
-                                    var toolTypes = section.options[section.selectedIndex].value;
-
-                                    //type.options.length = 1;
-
-                                    while (type.options.length) {
-                                        type.remove(0);
-                                    }
-                                    var addTool = tools[toolTypes];
-
-                                    type.options.add(new Option('اختر نوع المنتج'));
-                                    type.options[0].disabled = true;
-
-                                    if (addTool) {
-                                        var i;
-
-                                        for (i = 0; i < addTool.length; i++) {
-                                            var newTool = new Option(addTool[i], i);
-                                            type.options.add(newTool);
-                                            newTool.setAttribute("value", "tool " + i);
-                                            //console.log(newTool);
-                                        }
-                                    }
-                                }
-                            </script>
                             
                             <br></br>
                             <div id="tool_contact">
@@ -389,41 +225,6 @@ and open the template in the editor.
                                         name="Tcontact" placeholder="55-5555-555" pattern="[0-5]{2}-[0-9]{4}-[0-9]{3}"
                                         hidden="true" required>
                                     <br></br>
-
-                                    <script>
-                                        function ContactTextBox() {
-                                            var byEmail = document.getElementById("Tcontact1");
-                                            var byPhone = document.getElementById("Tcontact2");
-
-                                            var email = document.getElementById("Temail");
-                                            var phone = document.getElementById("Tphone");
-
-                                            //email.disabled = byEmail.checked ? false : true;
-
-                                            if (byEmail.checked) {
-                                                //phone.disabled;
-                                                email.hidden = false;
-                                                email.focus();
-                                            } else {
-                                                email.hidden = true;
-                                            }
-
-                                            if (byPhone.checked) {
-                                                phone.hidden = false;
-                                                phone.focus();
-                                            } else {
-                                                phone.hidden = true;
-                                            }
-
-                                            var btn = document.getElementById("submitbtn");
-                                            if (btn.click = true) {
-                                                if (!byEmail.checked && !byPhone.checked) {
-                                                    alert("You must check at least one checkbox.")
-                                                }
-                                            }
-
-                                        }
-                                    </script>
                                 </div>
                             </div>
                         </div>
@@ -451,57 +252,11 @@ and open the template in the editor.
 
                     </div>
 
-                    <script>
-                        function clicked() {
-                            var form = document.getElementById('myform');
-                            var hide = form.elements[i].hasAttribute('hidden');
-
-                            for (var i = 0; i < form.elements.length; i++) {
-                                if (form.elements[i].hasAttribute('required')&&!hide) {
-                                    alert('There are some required fields!');
-                                    return false;
-                                }
-                            }
-                            if (confirm('Do you want to submit?')) {
-                                form.submit();
-                            } else {
-                                return false;
-                            }
-
-                        }
-                    </script>
-
                     <div id="doneBTN">
                         <button onclick="location.href = 'index.html';" id="backbtn">الغاء</button>
                         <button type="submit" id="submitbtn" onclick="clicked()" value="اضافة">اضافة</button>
                         <button type="reset" id="resetbtn" value="مسح">مسح الخانات</button>
                     </div>
-
-                    <style>
-                        #doneBTN {
-                            text-align: center;
-                            margin-right: -10%;
-                            padding: 5%;
-                        }
-
-                        #submitbtn, #resetbtn, #backbtn {
-                            background-color: #088178;
-                            color: white;
-                            text-align: center;
-                            font-size: 23px;
-                            height: 50px;
-                            width: 200px;
-                            margin-right: 50px;
-                            border-radius: 20px;
-                            padding: 3px;
-                            border: 1px solid #cce7d0;
-                        }
-
-                        #submitbtn:hover, #resetbtn:hover, #backbtn:hover{
-                            background-color: #cce7d0;
-                            color: black;
-                        }
-                    </style>
 
                 </form>
             </div>
