--- a/free.html
+++ b/free.html
@@ -7,14 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>أقسامنا</title>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+        
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="headerStyle.css">
         <link rel="stylesheet" href="footerStyle.css">
 
+
     </head>
 
     <body>
-
+        <div class="rainbow-box">
         <section id="header">
             <div style="width: 100%;">
                 <ul id="navbar">
@@ -86,7 +88,7 @@
         </section>
 
 
-        <section id ="products-header" class="section-p1" class="section-m1">
+        <section id ="products-header" class="section-p1" class="section-m1" Style="margin-top:auto;">
 
 
             <select name="" class="order-by">
@@ -102,12 +104,6 @@
 
 
         <section id="product1" class="section-p1"  >
-
-
-
-
-
-
             <form action="" class="filter-form"  >
 
 
@@ -488,7 +484,7 @@
 
         <script src="script.js"></script>
 
-
+    </div>
     </body>
 
 </html>
